add job referrals review,slove mail sender bug,search bug, filter bug, retch bug